--- a/package.json
+++ b/package.json
@@ -12,34 +12,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
-    "core-js": "^2.4.0",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "0.6.12"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.2.30",
-    "@types/protractor": "^1.5.16",
-    "angular-cli": "^1.0.0-beta.11-webpack",
-    "codelyzer": "0.0.26",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-coverage": "^1.0.0",
-    "karma-jasmine": "0.3.8",
-    "protractor": "3.3.0",
-    "ts-node": "1.2.1",
-    "tslint": "3.13.0",
-    "typescript": "^2.0.0"
+    "@types/jasmine": "^2.5.35",
+    "@types/node": "^6.0.45",
+    "@types/selenium-webdriver": "2.44.26",
+    "angular-cli": "1.0.0-beta.17",
+    "codelyzer": "^1.0.0-beta.2",
+    "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^2.7.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "^4.0.9",
+    "ts-node": "^1.5.2",
+    "tslint": "^3.15.1",
+    "typescript": "^2.0.3"
   }
 }
